--- a/index.html
+++ b/index.html
@@ -2,27 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio project</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Innocent's Portfolio</h1>
-    <h2>I'm a web developer</h2>
-    <hr>
-<h2>Movie Ranking</h2>
-<a href="./public/moving ranking.html">Movie Ranking</a>
-<img src="./assets/images/image_6487327.JPG" 200 />
-<h2>Birthday invite</h2>
-<a href="./public/birthday invite.html">Birthday Invite</a>
-<img src="./assets/images/image_6487327 (1).JPG" 200 />
-<hr>
-<a href="./public/about.html">About me</a>
-<a href="./public/contact.html">Contact Me</a>
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+    <img src="./4.1 Webpages/assets/images/bishop.jpg" alt="My image"
+    title="Innocent Kalu" draggable="true" />
+    <h2>Object Statement</h2>
+    <p>
+        A young vibrant individual with the thirst to leave a mark on the history of any
+        organization i find myself. To offer exceptional ideas and innovative methods in achieving stated
+        goals. I hope to be an ctivr team member in a challenging, focused and dynamic organization that requires maximal
+        engagement of my physical and intellectual potentials
+    </p>
+    <h2>Education</h2>
+    <p>
+    <ol>
+        <li>H.N.D  Federal Polytechnic Oko  2020</li>
+        <li>N.D.    Federal Polytechnic Oko 2017</li>
+        <li>S.S.C.E     Rich Devos International School     2011</li>
+        <li>F.S.L.C.    Emmanuel Nursery/Primary School     2006</li>
+    </ol>
+    </p>
+    <h2>Work Experience</h2>
+    <ol>
+        <li>Teacher     st.Catherine group of schools   2023</li>
+        <li>Web developer   Bishtech programmers    2022</li>
+    </ol>
+    <h1>Skills</h1>
+    <ol>
+        <li>Web development</li>
+        <li>Unix operating system</li>
+        <li>Driving</li>
+        <li>Teaching</li>
+    </ol>
+    <h2>Accomplishments</h2>
+    <ol>
+        <li>Director of transport, students union Government Federal Polytechnic Oko</li>
+        <li>Bende Cordinator, Progressive Abia Youths</li>
+    </ol>
+    <a href="./4.3 HTML Porfolio Project/public/contact.html">contact Me</a>
+    <a href="./4.1 Webpages/public/about.html">About me</a>
+    <footer>
+        <p> copyright Innocent 2023</p>
+    </footer>
 </body>
 </html>
